# qr_contact_generator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docs.md
src/: main.rs
