[package]
name = "egui_list"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.30.0", features = ["__screenshot"] }
egui_extras = { version = "0.30.0", features = ["default", "image"] }
env_logger = {version= "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
